--- a/app/assets/stylesheets/bootstrap.css.erb
+++ b/app/assets/stylesheets/bootstrap.css.erb
@@ -13,6 +13,8 @@ html {
 }
 
 body {
+  /*background-image: url('<%= image_url 'sand.jpg' %>');
+	background-attachment: fixed;*/
   margin: 0;
 }
 
