--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -170,3 +170,85 @@
   text-decoration: none;
 }
 
+.form-value-cover {
+  padding: 0.5rem 0.75rem;
+  margin-bottom: 0;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.25;
+  color: #464a4c;
+  text-align: center;
+  background-color: #eceeef;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 0.25rem;
+}
+
+.top-btn {
+  color: blue;
+  font-size: 17px;
+  line-height: 17px;
+  text-align: center;
+  background: linear-gradient(#f2f2f2, #dddddd);
+  border-top: 1px solid #fff;
+  border-left: 1px solid #fff;
+  /*border-right: 1px solid #999;*/
+  padding: 8px 8px;
+  margin: 0px;
+  /*border-color: #0275d8;*/
+}
+
+
+.top-btn:hover {
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 39%, rgba(240,240,240,1) 89%, rgba(212,212,212,1) 100%);
+  border-top: 0px;
+  padding-top: 9px;
+  border-left: 0px;
+  padding-left: 6px;
+}
+
+.top-btn:active {
+  background: linear-gradient(rgba(153,153,153,1) 0%, rgba(214,214,214,1) 19%, rgba(252,252,252,1) 100%);
+  border-top: 0px;
+  padding-top: 9px;
+  border-left: 0px;
+  padding-left: 6px;
+}
+
+.bar {
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: inline-flex; 
+  height: 36px;
+  border: 1px solid #999;
+}
+
+.bar-side {
+  border-right: 1px solid #999;
+  display: inline-block;
+  margin: 0px;
+}
+
+.bar-side:last-child {
+  color: red;
+  border-right: 0px;
+  display: inline-block;
+  margin: 0px;
+} 
+
+a {
+  font-weight: bold;
+  text-decoration: none;
+  display: inline-block;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+margin: 0px;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #FF0000;
+}
