--- a/app/views/translations/show.html.erb
+++ b/app/views/translations/show.html.erb
@@ -4,7 +4,7 @@
       <h1><%= @translation.title %></h1>
     </div>
     <div class="d-inline-flex mb-3">
-      <%= link_to "Edit", edit_translation_path(@translation), class: "btn btn-primary mr-1" %>
+      <%= link_to "Edit", edit_translation_path(@translation.language, @translation), class: "btn btn-primary mr-1" %>
     </div>
     <div class="d-inline-flex mb-3">
       <%= link_to "Delete", "", class: "btn btn-danger mr-1" %>
@@ -13,17 +13,23 @@
       <%= link_to @translation.language.tongue, foreignlanguage_path(@translation.language), class: "btn btn-gold" %>
     </div>
   </div>
-  <h5 class="text-muted"><%= @translation.published.strftime("%A %B %d, %Y")%></h5>
-  <div class="video-container mb-4">
-    <iframe id="ytplayer" type="text/html"
-        width="720" height="405"
-        src="https://www.youtube.com/embed/<%= @translation.video_id %>?enablejsapi=1"
-        frameborder="0"
-        style="border: solid 4px #0275d8"
-        allowfullscreen>
-    </iframe>
-  </div>
+  <% if !@translation.published.nil? %>
+    <h5 class="text-muted"><%= @translation.published.strftime("%A %B %d, %Y")%></h5>
+  <% end %>
+  <% if !@translation.video_id.nil? %>
+    <div class="video-container mb-4">
+      <iframe id="ytplayer" type="text/html"
+          width="720" height="405"
+          src="https://www.youtube.com/embed/<%= @translation.video_id %>?enablejsapi=1"
+          frameborder="0"
+          style="border: solid 4px #0275d8"
+          allowfullscreen>
+      </iframe>
+    </div>
+  <% end %>
+  <% if !@translation.body.nil? %>
   <h5>Transcript:</h5>
   <hr>
-  <p><%= @translation.body %></p>
+    <p><%= @translation.body %></p>
+  <% end %>
 </div>
