--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,29 +1,21 @@
-<div class="container">
-<div class="pb-4">
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
+<div class="container" style="background-color: white;">
+ <!--
+ <div id="carouselExampleIndicators" class="carousel slide mx-0" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active ">
-        <%= image_tag "hard-preaching.jpg", alt: "First slide", class: "d-block img-fluid rounded" %>
+        <%= image_tag "hard-preaching.jpg", alt: "First slide", class: "d-block img-fluid" %>
         <div class="carousel-caption d-none d-md-block">
-          <!--<h1 id="" class="text-center text-uppercase display-1 shadow">hard preaching</h1>-->
+          <!--<h1 id="" class="text-center text-uppercase display-1 shadow">hard preaching</h1>
         </div>
       </div>
       <div class="carousel-item">
-        <%= image_tag "hymns.jpg", alt: "Second slide", class: "d-block img-fluid rounded" %>
+        <%= image_tag "hymns.jpg", alt: "Second slide", class: "d-block img-fluid" %>
         <div class="carousel-caption d-none d-md-block">
-          <!--<h1 id="slider-header" class="text-center text-uppercase display-1 shadow">hymns</h1>-->
+          <!--<h1 id="slider-header" class="text-center text-uppercase display-1 shadow">hymns</h1>
         </div>
       </div>
       <div class="carousel-item">
-        <%= image_tag "congregation.jpg", alt: "Third slide", class: "d-block img-fluid rounded" %>
-        <div class="carousel-caption d-none d-md-block">
-          <!--<h1 id="slider-header" class="text-center text-uppercase display-1 shadow">king james</h1>-->
-        </div>
+        <%= image_tag "congregation.jpg", alt: "Third slide", class: "d-block img-fluid" %>
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -34,8 +26,7 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-  </div>
-</div>
+  </div>-->
 
   <div class="row">
     <div class="col-3">
@@ -53,8 +44,8 @@
       <span class="badge badge-pill badge-success">Baptist</span>
       church.</p>
       <p>Faithful Word Baptist Church is a young, family-integrated church. We would love to get to know you personally at one of our services!</p>
-      <p><span class="badge badge-warning">NEW</span> Pastor Anderson's materials have now been translated into over 115 languages!</p>
-      <p><span class="badge badge-warning">NEW</span> Check out this recent video of Pastor Anderson preaching in a public school outside of Georgetown, Guyana</p>
+      <p><%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>Pastor Anderson's materials have now been translated into over 115 languages!</p>
+      <p><%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>Check out Pastor Anderson's new documentary "Burn That Way After All:"</p>
       <div class="video-container mb-4">
         <iframe id="ytplayer" type="text/html"
             width="720" height="405"
