--- a/app/views/pages/churchdirectory.html.erb
+++ b/app/views/pages/churchdirectory.html.erb
@@ -1,147 +1,145 @@
 <% provide(:title, "Church Directory") %>
 <%= render "shared/banner" %>
 <div class="container">
-    <div class="row">
-        <div class="col-3">
-            <%= render "shared/side-bar" %>
-        </div>
-        <div class="col-9">
-            <h1>Independent Baptist Church Directory</h1>
-            <h4>Instructions on how to find the best church in your area: </h4>
-            <ul class="list-unstyled">
-                <li>1. Visit the Independent Baptist Church Locator known as <a href="http://militarygetsaved.tripod.com/findchurch.html">Military Get Saved</a>.</li>
-                <li>2. Click on your state in the left hand sidebar.</li>
-                <li>3. Press <kbd>control</kbd>+<kbd>F</kbd> (PC) or <kbd>command</kbd>+<kbd>F</kbd> (MAC) feature to search the page for the word "soul." This will help you find the churches that are advertising soul-winning. These will usually be the best churches. (If you are having trouble using the "find" feature, it is usually in the "edit" menu.) </li>
-                <li>4. <span class="badge badge-danger">Physically</span> attend (not call) all the soul-winning churches in your area until you decide on the best one.</li>
-            </ul>
-            <h4>List of a few outstanding churches here:</h4>
-            <div class="container">
-                <div class="row pb-3">
-                    <div class="col-6">
-                        <div class="card" style="width: 25rem;">
-                            <div class="card-block">
-                                <h4 class="card-title">Faithful Word Baptist Church</h4>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">2741 W Southern Ave #14<br>Tempe, AZ 85282</li>
-                                <li class="list-group-item">(602)454-0263</li>
-                                <li class="list-group-item">Pastor Steven L Anderson</li>
-                            </ul>
-                            <div class="card-block">
-                                <a href="http://www.faithfulwordbaptist.org/" class="card-link">faithfulwordbaptist.org</a>
-                            </div>
-                        </div>
-                    </div>
-                    
-                    <div class="col-6">
-                        <div class="card" style="width: 25rem;">
-                            <div class="card-block">
-                                <h4 class="card-title">Word of Truth Baptist Church</h4>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">8154 E Florentine Rd. Suite A<br>Prescott Valley, AZ 86314</li>
-                                <li class="list-group-item">(928) 362-0558</li>
-                                <li class="list-group-item">Pastor David Berzins</li>
-                            </ul>
-                            <div class="card-block">
-                                <a href="http://www.wordoftruthbaptist.org/" class="card-link">wordoftruthbaptist.org</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="row pb-3">
-                    <div class="col-6">
-                        <div class="card" style="width: 25rem;">
-                            <div class="card-block">
-                                <h4 class="card-title">Verity Baptist Church</h4>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">4153 Northgate Blvd, Suite #1<br>Sacramento, CA 95834</li>
-                                <li class="list-group-item">(916) 792-2050</li>
-                                <li class="list-group-item">Pastor Roger Jimenez</li>
-                            </ul>
-                            <div class="card-block">
-                                <a href="https://www.veritybaptist.com/" class="card-link">veritybaptist.com</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="card" style="width: 25rem;">
-                            <div class="card-block">
-                                <h4 class="card-title">Mountainview Baptist Church</h4>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">PO Box 266<br>Custer, SD 57730</li>
-                                <li class="list-group-item">(605) 673-2498</li>
-                                <li class="list-group-item">Pastor Matt Furse</li>
-                            </ul>
-                            <div class="card-block">
-                                <a href="http://mountainviewbaptistcuster.com/" class="card-link">mountainviewbaptistcuster.com</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="row pb-3">
-                    <div class="col-6">
-                        <div class="card" style="width: 25rem;">
-                            <div class="card-block">
-                                <h4 class="card-title">Stedfast Baptist Church</h4>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">5840 Jacksboro Hwy #A<br>Fort Worth, TX 76114</li>
-                                <li class="list-group-item">480) 438-0375</li>
-                                <li class="list-group-item">Pastor Donnie Romero</li>
-                            </ul>
-                            <div class="card-block">
-                                <a href="http://www.stedfastbaptistkjv.org/" class="card-link">stedfastbaptistkjv.org</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="card" style="width: 25rem;">
-                            <div class="card-block">
-                                <h4 class="card-title">Old Path Baptist Church</h4>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">2590 Mount Olive Rd<br>Adkins, TX 78101</li>
-                                <li class="list-group-item">(224)619-6896</li>
-                                <li class="list-group-item">Pastor Manly Perry</li>
-                            </ul>
-                            <div class="card-block">
-                                <a href="http://www.oldpathtxb.church/" class="card-link">oldpathtxb.church</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            
-                <div class="row pb-3">
-                    <div class="col-6">
-                        <div class="card" style="width: 25rem;">
-                            <div class="card-block">
-                                <h4 class="card-title">Faithful Word Baptist Church (North)</h4>
-                            </div>
-                            <ul class="list-group list-group-flush">
-                                <li class="list-group-item">12020 N 35th Ave,<br>Phoenix, AZ 85029</li>
-                                <li class="list-group-item">(602)456-1049</li>
-                                <li class="list-group-item">Pastor Steven L Anderson</li>
-                            </ul>
-                            <div class="card-block">
-                                <a href="http://fwbcnorth.org/" class="card-link">fwbcnorth.org</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6">
-            
-                    </div>
-                </div>
+  <div class="d-flex flex-nowrap">
+      <%= render "shared/side-bar" %>
+    <div class="c">
+      <h1>Independent Baptist Church Directory</h1>
+      <h4>Instructions on how to find the best church in your area: </h4>
+      <ul class="list-unstyled">
+        <li>1. Visit the Independent Baptist Church Locator known as <a href="http://militarygetsaved.tripod.com/findchurch.html">Military Get Saved</a>.</li>
+        <li>2. Click on your state in the left hand sidebar.</li>
+        <li>3. Press <kbd>control</kbd>+<kbd>F</kbd> (PC) or <kbd>command</kbd>+<kbd>F</kbd> (MAC) feature to search the page for the word "soul." This will help you find the churches that are advertising soul-winning. These will usually be the best churches. (If you are having trouble using the "find" feature, it is usually in the "edit" menu.) </li>
+        <li>4. <span class="badge badge-danger">Physically</span> attend (not call) all the soul-winning churches in your area until you decide on the best one.</li>
+      </ul>
+      <h4>List of a few outstanding churches here:</h4>
+      <div class="container">
+        <div class="row pb-3">
+          <div class="col-6">
+            <div class="card" style="width: 25rem;">
+              <div class="card-block">
+                <h4 class="card-title">Faithful Word Baptist Church</h4>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">2741 W Southern Ave #14<br>Tempe, AZ 85282</li>
+                <li class="list-group-item">(602)454-0263</li>
+                <li class="list-group-item">Pastor Steven L Anderson</li>
+              </ul>
+              <div class="card-block">
+                <a href="http://www.faithfulwordbaptist.org/" class="card-link">faithfulwordbaptist.org</a>
+              </div>
             </div>
-            
-            <blockquote class="blockquote">
-                <p class="mb-0">“But if I tarry long, that thou mayest know how thou oughtest to behave thyself in the house of God, which is the church of the living God, the pillar and ground of the truth.”</p>
-                <footer class="blockquote-footer">1 Timothy 3:15 <cite title="Source Title">KJV</cite></footer>
-            </blockquote>
+          </div>
+          
+          <div class="col-6">
+            <div class="card" style="width: 25rem;">
+              <div class="card-block">
+                <h4 class="card-title">Word of Truth Baptist Church</h4>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">8154 E Florentine Rd. Suite A<br>Prescott Valley, AZ 86314</li>
+                <li class="list-group-item">(928) 362-0558</li>
+                <li class="list-group-item">Pastor David Berzins</li>
+              </ul>
+              <div class="card-block">
+                <a href="http://www.wordoftruthbaptist.org/" class="card-link">wordoftruthbaptist.org</a>
+              </div>
+            </div>
+          </div>
         </div>
+      
+        <div class="row pb-3">
+          <div class="col-6">
+            <div class="card" style="width: 25rem;">
+              <div class="card-block">
+                <h4 class="card-title">Verity Baptist Church</h4>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">4153 Northgate Blvd, Suite #1<br>Sacramento, CA 95834</li>
+                <li class="list-group-item">(916) 792-2050</li>
+                <li class="list-group-item">Pastor Roger Jimenez</li>
+              </ul>
+              <div class="card-block">
+                <a href="https://www.veritybaptist.com/" class="card-link">veritybaptist.com</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="card" style="width: 25rem;">
+              <div class="card-block">
+                <h4 class="card-title">Mountainview Baptist Church</h4>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">PO Box 266<br>Custer, SD 57730</li>
+                <li class="list-group-item">(605) 673-2498</li>
+                <li class="list-group-item">Pastor Matt Furse</li>
+              </ul>
+              <div class="card-block">
+                <a href="http://mountainviewbaptistcuster.com/" class="card-link">mountainviewbaptistcuster.com</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+        <div class="row pb-3">
+          <div class="col-6">
+            <div class="card" style="width: 25rem;">
+              <div class="card-block">
+                <h4 class="card-title">Stedfast Baptist Church</h4>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">5840 Jacksboro Hwy #A<br>Fort Worth, TX 76114</li>
+                <li class="list-group-item">480) 438-0375</li>
+                <li class="list-group-item">Pastor Donnie Romero</li>
+              </ul>
+              <div class="card-block">
+                <a href="http://www.stedfastbaptistkjv.org/" class="card-link">stedfastbaptistkjv.org</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="card" style="width: 25rem;">
+              <div class="card-block">
+                <h4 class="card-title">Old Path Baptist Church</h4>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">2590 Mount Olive Rd<br>Adkins, TX 78101</li>
+                <li class="list-group-item">(224)619-6896</li>
+                <li class="list-group-item">Pastor Manly Perry</li>
+              </ul>
+              <div class="card-block">
+                <a href="http://www.oldpathtxb.church/" class="card-link">oldpathtxb.church</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      
+        <div class="row pb-3">
+          <div class="col-6">
+            <div class="card" style="width: 25rem;">
+              <div class="card-block">
+                <h4 class="card-title">Faithful Word Baptist Church (North)</h4>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item">12020 N 35th Ave,<br>Phoenix, AZ 85029</li>
+                <li class="list-group-item">(602)456-1049</li>
+                <li class="list-group-item">Pastor Steven L Anderson</li>
+              </ul>
+              <div class="card-block">
+                <a href="http://fwbcnorth.org/" class="card-link">fwbcnorth.org</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+      
+          </div>
+        </div>
+      </div>
+      
+      <blockquote class="blockquote">
+        <p class="mb-0">“But if I tarry long, that thou mayest know how thou oughtest to behave thyself in the house of God, which is the church of the living God, the pillar and ground of the truth.”</p>
+        <footer class="blockquote-footer">1 Timothy 3:15 <cite title="Source Title">KJV</cite></footer>
+      </blockquote>
     </div>
+  </div>
 </div>
