--- a/app/views/pages/malawi.html.erb
+++ b/app/views/pages/malawi.html.erb
@@ -1,78 +1,76 @@
 <% provide(:title, "Malawi") %>
 <%= render "shared/banner" %>
 <div class="container">
-    <div class="row">
-        <div class="col-3">
-            <%= render "shared/side-bar" %>
+  <div class="d-flex flex-nowrap">
+    <%= render "shared/side-bar" %>
+    <div class="c">
+      <h1>Malawi Missions</h1>
+        <p>
+        Below is a donate button to help support Garrett Kirchway and the FWBC - Malawi Project.<br>Bro. Kirchway is a missionary sent out of Faithful Word Baptist Church to reach the people of Malawi with the Gospel of our Lord Jesus Christ.
+        </p>
+        <div class="text-center">
+        <a class="btn btn-primary btn-lg text-center" href="https://www.truebornsons.com/donate-to-fwbc/" role="button">DONATE NOW &rsaquo;</a>
         </div>
-        <div class="col-9">
-            <h1>Malawi Missions</h1>
-              <p>
-                Below is a donate button to help support Garrett Kirchway and the FWBC - Malawi Project.<br>Bro. Kirchway is a missionary sent out of Faithful Word Baptist Church to reach the people of Malawi with the Gospel of our Lord Jesus Christ.
-              </p>
-              <div class="text-center">
-                <a class="btn btn-primary btn-lg text-center" href="https://www.truebornsons.com/donate-to-fwbc/" role="button">DONATE NOW &rsaquo;</a>
-              </div>
-              <div class="text-center pt-4">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/O67FOt-m-jE" frameborder="0" allowfullscreen></iframe>
-              </div>
-              <p>
-                Brother Garrett Kirchway has been a faithful member of Faithful Word Baptist Church since he was saved and baptized in September 2008. Starting in May 2016, Bro Kirchway is now in the ministry full time as a missionary, or what the Bible calls an "evangelist." In April 2017, he will be moving to Africa where he plans to spend the rest of his life preaching the Gospel to the people of Malawi. He will be based in Lilongwe, which is the largest city in Malawi.
-              </p>
-              <p>
-                Faithful Word Baptist Church will be paying Bro Kirchway's salary until such a time as the church in Malawi is able to become independent. In addition, we will be raising money online through online donations in order to pay his wages and provide supplies such as Bibles, New Testaments, church invitations, song books, preaching CDs, DVDs, etc.
-              </p>
-              <p>
-                Before Bro Kirchway was saved, he was involved in the charismatic movement, which unfortunately is very popular in Malawi. He has also lived a very austere life for the last 8 years, so in many ways he is well suited for the task that God has for him in Malawi.
-              </p>
-              <h4>Bro. Garrett Kirchway's Schedule:</h4>
-
-              <div id="events-pad">
-                <div class="card">
-                  <div class="card-block">
-                    <h4 class="card-title">Missionary Journey to Guyana</h4>
-                    <h6 class="card-subtitle mb-2 text-muted">Jan 11 - Feb 9</h6>
-                    <p class="card-text">Guyana</p>
-                  </div>
-                </div>
-              </div>
-
-              <div id="events-pad">
-                <div class="card">
-                  <div class="card-block">
-                    <h4 class="card-title">Soul-winning amongst Indian tribes in Arizona</h4>
-                    <h6 class="card-subtitle mb-2 text-muted">February - March</h6>
-                    <p class="card-text">Arizona</p>
-                  </div>
-                </div>
-              </div>
-
-              <div id="events-pad">
-                <div class="card">
-                  <div class="card-block">
-                    <h4 class="card-title">Departure to Malawi</h4>
-                    <h6 class="card-subtitle mb-2 text-muted">Mid-Apil</h6>
-                    <p class="card-text">Malawi</p>
-                  </div>
-                </div>
-              </div>
-
-              <div id="events-pad">
-                <div class="card">
-                  <div class="card-block">
-                    <h4 class="card-title">FWBC's First Official Services in Lilongwe, Malawi</h4>
-                    <h6 class="card-subtitle mb-2 text-muted">April 30</h6>
-                    <p class="card-text">Lilongwe, Malawi</p>
-                  </div>
-                </div>
-              </div>
-
-              <p>Check out Bro. Garrett Kirchway's YouTube Channel: <a href="https://www.youtube.com/channel/UCFbRPOX35YlKvISNq9mAwfw">FWBC Missions</a></p>
-
-              <blockquote class="blockquote">
-                <p class="mb-0">“But ye shall receive power, after that the Holy Ghost is come upon you: and ye shall be witnesses unto me both in Jerusalem, and in all Judaea, and in Samaria, and unto the uttermost part of the earth.”</p>
-                <footer class="blockquote-footer">Acts 1:8 <cite title="Source Title">KJV</cite></footer>
-              </blockquote>
+        <div class="text-center pt-4">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/O67FOt-m-jE" frameborder="0" allowfullscreen></iframe>
         </div>
+        <p>
+        Brother Garrett Kirchway has been a faithful member of Faithful Word Baptist Church since he was saved and baptized in September 2008. Starting in May 2016, Bro Kirchway is now in the ministry full time as a missionary, or what the Bible calls an "evangelist." In April 2017, he will be moving to Africa where he plans to spend the rest of his life preaching the Gospel to the people of Malawi. He will be based in Lilongwe, which is the largest city in Malawi.
+        </p>
+        <p>
+        Faithful Word Baptist Church will be paying Bro Kirchway's salary until such a time as the church in Malawi is able to become independent. In addition, we will be raising money online through online donations in order to pay his wages and provide supplies such as Bibles, New Testaments, church invitations, song books, preaching CDs, DVDs, etc.
+        </p>
+        <p>
+        Before Bro Kirchway was saved, he was involved in the charismatic movement, which unfortunately is very popular in Malawi. He has also lived a very austere life for the last 8 years, so in many ways he is well suited for the task that God has for him in Malawi.
+        </p>
+        <h4>Bro. Garrett Kirchway's Schedule:</h4>
+
+        <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+          <h4 class="card-title">Missionary Journey to Guyana</h4>
+          <h6 class="card-subtitle mb-2 text-muted">Jan 11 - Feb 9</h6>
+          <p class="card-text">Guyana</p>
+          </div>
+        </div>
+        </div>
+
+        <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+          <h4 class="card-title">Soul-winning amongst Indian tribes in Arizona</h4>
+          <h6 class="card-subtitle mb-2 text-muted">February - March</h6>
+          <p class="card-text">Arizona</p>
+          </div>
+        </div>
+        </div>
+
+        <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+          <h4 class="card-title">Departure to Malawi</h4>
+          <h6 class="card-subtitle mb-2 text-muted">Mid-Apil</h6>
+          <p class="card-text">Malawi</p>
+          </div>
+        </div>
+        </div>
+
+        <div id="events-pad">
+        <div class="card">
+          <div class="card-block">
+          <h4 class="card-title">FWBC's First Official Services in Lilongwe, Malawi</h4>
+          <h6 class="card-subtitle mb-2 text-muted">April 30</h6>
+          <p class="card-text">Lilongwe, Malawi</p>
+          </div>
+        </div>
+        </div>
+
+        <p>Check out Bro. Garrett Kirchway's YouTube Channel: <a href="https://www.youtube.com/channel/UCFbRPOX35YlKvISNq9mAwfw">FWBC Missions</a></p>
+
+        <blockquote class="blockquote">
+        <p class="mb-0">“But ye shall receive power, after that the Holy Ghost is come upon you: and ye shall be witnesses unto me both in Jerusalem, and in all Judaea, and in Samaria, and unto the uttermost part of the earth.”</p>
+        <footer class="blockquote-footer">Acts 1:8 <cite title="Source Title">KJV</cite></footer>
+        </blockquote>
     </div>
+  </div>
 </div>
