--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
-  <div id="banner-img">
-    <%= image_tag "GROUP_SHOT.jpg", width: '100%', height: 'auto', alt: "Faithful Word Baptist Church" %>
+  <div class="banner-border my-3">
+    <div class="banner-img">
+      <%= image_tag "GROUP_SHOT.jpg", width: '100%', height: 'auto', alt: "Faithful Word Baptist Church" %>
+    </div>
   </div>
 </div>
