--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -1,40 +1,45 @@
-<ul class="nav flex-column nav-pills">
-    <li class="nav-item">
-        <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "nav-link text-uppercase #{"active" if active("/doctrinalstatement")}" %>
-    </li>
-    <li class="nav-item">
-        <%= link_to "Foreign Languages", foreignlanguages_path, class: "nav-link text-uppercase #{"active" if active("/foreignlanguages")}" %>
-    </li>
-    <li class="nav-item">
-        <%= link_to "Church Directory", churchdirectory_path, class: "nav-link text-uppercase #{"active" if active("/churchdirectory")}" %>
-    </li>
-    <li class="nav-item">
-        <%= link_to "Pictures", "https://get.google.com/albumarchive/117089279522537034856", class: "nav-link text-uppercase", target: "_blank" %>
-    </li>
-    <li class="nav-item">
-        <%= link_to "Instagram", "http://www.instagram.com/faithfulwordbaptist", class: "nav-link text-uppercase", target: "_blank" %>
-    </li>
-    <li class="nav-item">
-        <%= link_to "Hymns", "", class: "nav-link text-uppercase disabled" %>
-    </li>
-    <li class="nav-item">
-        <%= link_to "Psalms", psalms_path, class: "nav-link text-uppercase #{"active" if active("/psalms")}" %>
-    </li>
-    <li class="nav-item">
-        <%= link_to "Radio", radio_path, class: "nav-link text-uppercase #{"active" if active("/radio")}" %>
-    </li>
-    <li class="nav-item">
-        <%= link_to audiobible_path, class: "nav-link text-uppercase #{"active" if active("/audiobible")}" do %>
-             Audio Bible <span class="badge badge-warning d-inline-block">NEW</span>
+<div class="side-column">
+  <div class="browse-side-column">
+    <ul class="browse-categories-side">
+      <li>
+        <%= link_to "Doctrinal Statement", doctrinalstatement_path, class: "browse-link#{" active-s" if active("/doctrinalstatement")}" %>
+      </li>
+      <li>
+        <%= link_to "Foreign Languages", foreignlanguages_path, class: "browse-link#{" active-s" if active("/foreignlanguages")}" %>
+      </li>
+      <%= render 'shared/foreign-language-dropdown'if active "/foreignlanguages" %>
+      <li>
+        <%= link_to "Church Directory", churchdirectory_path, class: "browse-link#{" active-s" if active("/churchdirectory")}" %>
+      </li>
+      <li>
+        <%= link_to "Pictures", "https://get.google.com/albumarchive/117089279522537034856", class: "browse-link" %>
+      </li>
+      <li>
+        <%= link_to "Instagram", "http://www.instagram.com/faithfulwordbaptist", class: "browse-link" %>
+      </li>
+      <li>
+        <%= link_to "Hymns", "", class: "browse-link"%>
+      </li>
+      <li>
+        <%= link_to "Psalms", psalms_path, class: "browse-link#{" active-s" if active("/psalms")}" %>
+      </li>
+      <li>
+        <%= link_to "Radio", radio_path, class: "browse-link#{" active-s" if active("/radio")}" %>
+      </li>
+      <li>
+        <%= link_to audiobible_path, class: "browse-link#{" active-s" if active("/audiobible")}" do %>
+          Audio Bible <%= image_tag 'new_sml_27x13.gif', style:"margin-right: 5px;" %>
         <% end %>
-    </li>
-    <li class="nav-item">
-        <%= link_to "Botswana", "http://www.fwbcbotswana.com", class: "nav-link text-uppercase", target: "_blank" %>
-    </li>
-    <li class="nav-item">
-        <%= link_to "Malawi", malawi_path, class: "nav-link text-uppercase #{"active" if active("/malawi")}" %>
-    </li>
-    <li class="nav-item">
-        <%= link_to "Donate", "http://www.truebornsons.com/donate-to-fwbc", class: "nav-link text-uppercase", target: "_blank" %>
-    </li>
-</ul>
+      </li>
+      <li>
+        <%= link_to "Botswana", "http://www.fwbcbotswana.com", class: "browse-link" %>
+      </li>
+      <li>
+        <%= link_to "Malawi", malawi_path, class: "browse-link#{" active-s" if active("/malawi")}" %>
+      </li>
+      <li>
+        <%= link_to "Donate", "http://www.truebornsons.com/donate-to-fwbc", class: "browse-link" %>
+      </li>
+    </ul>
+  </div>
+</div>
